<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".add_product"
    tools:showIn="@layout/activity_add_product">



    <LinearLayout
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/item_code"
            android:hint="@string/code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <android.support.design.widget.TextInputEditText
            android:id="@+id/item_name"
            android:hint="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <android.support.design.widget.TextInputEditText
            android:id="@+id/item_brand"
            android:hint="@string/brand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <android.support.design.widget.TextInputEditText
            android:id="@+id/item_price"
            android:hint="@string/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <android.support.design.widget.TextInputEditText
            android:id="@+id/item_quantity"
            android:hint="@string/quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/add_button"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="123dp"
                android:layout_marginEnd="126dp"
                android:background="@drawable/buttonstyle"
                android:backgroundTint="@color/colorAccent"
                android:gravity="center"
                android:text="add"
                android:textSize="18sp" />

        </RelativeLayout>
    </LinearLayout>


</LinearLayout>